issue#15358 Return properly encoded URLs from JarResource#getResourceURL()